--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "obj-merged": "^1.0.5",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-image-crop": "^2.0.8",
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
     "redux": "^3.5.2",
@@ -32,6 +33,7 @@
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "rc-form": "^1.4.6",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
     "svg-sprite-loader": "^0.3.1",
     "svg-url-loader": "^2.1.1",
